@@ -16,7 +16,7 @@ gamma.shape.glm <- function(object, it.lim = 10,
     alpha <- (6 + 2*Dbar)/(Dbar*(6 + Dbar))
     if(verbose) {
 	message("Initial estimate:", format(alpha))
-	flush.console()
+	utils::flush.console()
     }
     fixed <-  -y/u - log(u) + log(A) + 1 + log(y + (y == 0))
     eps <- 1
@@ -27,7 +27,7 @@ gamma.shape.glm <- function(object, it.lim = 10,
         alpha <- alpha + (eps <- sc/inf)
         if(verbose) {
 	    message("Iter. ", itr, " Alpha:", alpha)
-	    flush.console()
+	    utils::flush.console()
 	}
     }
     if(itr > it.lim) warning("iteration limit reached")
